--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -52,4 +53,7 @@ dependencies {
 
     implementation "com.kakao.sdk:v2-all:2.11.2" // 전체 모듈 설치, 2.11.0 버전부터 지원
     implementation "com.kakao.sdk:v2-user:2.11.2" // 카카오 로그인
+
+    implementation platform('com.google.firebase:firebase-bom:31.0.2') //Firebase
+    implementation 'com.google.firebase:firebase-firestore-ktx' //Firebase Firestore
 }
