--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,8 @@
 
         <activity android:name=".history.ShowHistoryDetailActivity"
             android:exported="true"
-            android:enabled="true">
+            android:enabled="true"
+            android:theme="@style/MyDialogActivity">
             <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
