--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,4 +65,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx' //Firebase Firestore
 
     implementation 'com.prolificinteractive:material-calendarview:1.4.3'
+
+    implementation 'com.github.angads25:toggle:1.1.0' //토글버튼
 }
