--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.ezralee.bdotodo" >
+    package="com.ezralee.bdotodo">
 
     <!-- 인터넷 사용 권한 설정-->
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".main.KakaoLogin"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -15,12 +16,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BDOTodo"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+
         <activity
             android:name=".main.MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
@@ -28,28 +29,56 @@
 
         <activity
             android:name=".goallist.GoalPresetActivity"
-            android:exported="true"
             android:enabled="true"
+            android:exported="true"
             android:theme="@style/MyDialogActivity">
             <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".goallist.SetGoalActivity"
-            android:exported="true"
-            android:enabled="true">
+        <activity
+            android:name=".goallist.SetGoalActivity"
+            android:enabled="true"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".history.ShowHistoryDetailActivity"
-            android:exported="true"
+        <activity
+            android:name=".history.ShowHistoryDetailActivity"
             android:enabled="true"
+            android:exported="true"
             android:theme="@style/MyDialogActivity">
             <intent-filter>
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".main.LoginActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <!-- Kakao 인증 토큰을 받는 리다이렉션 액티비티 등록 -->
+        <activity
+            android:name="com.kakao.sdk.auth.AuthCodeHandlerActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <!-- Redirect URI: "kakao${NATIVE_APP_KEY}://oauth" -->
+                <data
+                    android:host="oauth"
+                    android:scheme="kakao3d3bd2ed347c5b04c668e03c479785f3" />
             </intent-filter>
         </activity>
 
