--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,16 +74,25 @@ dependencies {
 
     implementation 'com.github.angads25:toggle:1.1.0' //토글버튼
 
-    // room
-    implementation 'android.arch.persistence.room:runtime:1.1.1'
-    kapt 'android.arch.persistence.room:compiler:1.1.1'
+    // rx
+    implementation "io.reactivex.rxjava2:rxjava:$rxjava2_version"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxandroid_version"
+    implementation "com.jakewharton.rxbinding2:rxbinding-kotlin:$rxbinding_version"
 
-    // livedata
-    implementation 'android.arch.lifecycle:extensions:1.1.1'
-    kapt 'android.arch.lifecycle:compiler:1.1.1'
 
-    // 뷰모델 (ViewModel)
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
-    // 라이브 데이터(LiveData) - 옵저버 패턴 관련 - 데이터의 변경 사항을 알 수 있다.
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.5.1"
+// dependency injection
+// Dagger 2
+    implementation "com.google.dagger:dagger:$dagger2_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger2_version"
+    compileOnly "org.glassfish:javax.annotation:3.1.1"
+    implementation 'javax.inject:javax.inject:1'
+
+// ui
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+    implementation "com.android.support:recyclerview-v7:$support_version"
+    implementation "com.android.support:cardview-v7:$support_version"
+    implementation "com.android.support:design:$support_version"
+
+//anko
+    implementation "org.jetbrains.anko:anko-commons:$anko_version"
 }
