--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -93,7 +93,7 @@
 <!--            </intent-filter>-->
         </activity>
 
-        <activity android:name=".main.ColorPickerActivity"
+        <activity android:name=".dialog.ColorPickerActivity"
             android:exported="false"
             android:theme="@style/MyColorPicker">
             <intent-filter>
