--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,4 +114,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     testImplementation 'junit:junit:4.12'
     //implementation 'com.android.support:design:23.1.1'
+
+    implementation 'com.android.support:design:33.0.0'
+    implementation 'com.android.support:support-v4:33.0.0'
 }
